fix: implement dynamic IP detection and improve job output visibility
- Replace hardcoded 192.168.106.1 IP with dynamic detection for portability
- Add multiple fallback methods for different container runtimes (Colima, Docker Desktop, etc)
- Fix MultiKueue cross-VM connectivity using insecure-skip-tls-verify for TLS compatibility
- Improve service account verification in worker configuration
- Enhance test script log capture timing and job output visibility
- Update documentation with networking architecture details

--- a/sample-job.yaml
+++ b/sample-job.yaml
@@ -23,6 +23,9 @@ spec:
               echo "==================================="
               echo "🚀 MultiKueue Test Job Started!"
               echo "==================================="
+              echo ""
+              echo "🎯 Hello from MultiKueue!"
+              echo ""
               echo "Cluster Info:"
               echo "- Hostname: $(hostname)"
               echo "- Current time: $(date)"
