feat: add support for remote Kubernetes clusters
Add complete support for integrating remote Kubernetes clusters into the
MultiKueue local development environment, enabling users to test
multi-cluster job dispatching across local and remote infrastructure.

Key Features:
- Remote cluster integration with any Kubernetes cluster (cloud-managed,
  Kind, etc.)
- Automatic service account creation and kubeconfig generation for
  cross-cluster auth
- Optional remote functionality that doesn't break existing workflows
- Unified job template system with single sample-job.yaml for all
  cluster types

New Scripts:
- 1c-setup-remote-cluster.sh: Guidance for setting up external clusters
- 2c-configure-remote-multikueue.sh: Configure remote cluster and
  manager integration
- 3c-test-remote-multikueue.sh: Test job dispatching to remote clusters
- 4c-cleanup-remote.sh: Clean remote cluster resources

Architectural Improvements:
- Consistent a/b/c naming pattern: manager/worker/remote across all
  phases
- Simplified queue naming: worker-queue and remote-queue for clarity
- Harmonized manifest structure between worker and remote clusters
- Enhanced testing with explicit cluster type in success messages

The remote cluster functionality is completely optional - existing
manager + worker setups continue to work unchanged, while users can
opt-in to remote capabilities by setting REMOTE_KUBECONFIG.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
-# Generated kubeconfig files
+# Generated kubeconfig files (contain sensitive tokens)
 *.kubeconfig
+
+# Generated job files
+remote-test-job.yaml
