--- a/remote/remote-config.yaml
+++ b/remote/remote-config.yaml
@@ -3,3 +3,13 @@ apiVersion: kind.x-k8s.io/v1alpha4
 networking:
   apiServerAddress: "0.0.0.0"
   apiServerPort: 6443
+nodes:
+- role: control-plane
+  kubeadmConfigPatches:
+  - |
+    kind: ClusterConfiguration
+    apiServer:
+      certSANs:
+      - "localhost"
+      - "127.0.0.1"
+      - "0.0.0.0"
